<resources>
    <string name="app_name">MyRuns1</string>
    <string name="my_run_lable">MyRun1</string>
    <string name="main_activity_lable">Main Activity My runs</string>
    <string name="sign_in_activity_label">Ross</string>
    <string name="profile_activity_label">Register Profile</string>
    <string name="ui_profile_name_title">Name</string>
    <string name="ui_profile_name_hint">Name</string>
    <string name="ui_profile_gender_female">FEMALE</string>
    <string name="ui_profile_gender_male">MALE</string>
    <string name="ui_profile_email_hint">Email</string>
    <string name="email_password">Password</string>
    <string name="phone_number_hint">Phone</string>
    <string name="major_hint">Major</string>
    <string name="class_year_hint">Dartmouth Class</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="register_button">REGISTER</string>
    <string name="image">image</string>
    <string name="change_picture">Change</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="change_picture_button">CHANGE</string>p
    <string name="main_settings_menu">Settings</string>
    <string name="main_edit_profile_menu">Edit Profile</string>
    <string name="picture_picker_fragment">Profile Picture Picker</string>
    <string name="ui_profile_toast_save_text">Saved Image</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>
    <string name="ui_profile_photo_content_description">Your profile photo:</string>
    <string name="ui_button_change_title">CHANGE</string>
    <string name="ui_button_save_title">REGISTER</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="ui_profile_registration_incomplete">Profile Registration is Incomplete</string>


    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>Choose Picture From Gallery</item>
    </string-array>

</resources>
